op2/include/op_lib_core.h

typedef int op_access; // holds OP_READ, OP_WRITE, OP_RW, OP_INC, OP_MIN, OP_MAX, OP_WORK
typedef int op_arg_type; // holds OP_ARG_GBL, OP_ARG_DAT, OP_ARG_IDX, OP_ARG_INFO
/*
 * structures
 */

typedef struct {
  int index;        /* index */
  idx_l_t size;     /* number of elements in set */
  char const *name; /* name of set */
                    // for MPI support
  int core_size;    /* number of core elements in an mpi process*/
  int exec_size;    /* number of additional imported elements to be executed */
  int nonexec_size; /* number of additional imported elements that are not
                       executed */

  int stride;       /* device SoA stride */
} op_set_core;
typedef op_set_core *op_set;
typedef struct {
  int index;        /* index */
  op_set from,      /* set pointed from */
      to;           /* set pointed to */
  int dim,          /* dimension of pointer */
      *map;         /* array defining pointer */
  idx_g_t *map_gbl; /* array with global indices (long type) */
  int *map_d;       /* array on device */
  char const *name; /* name of pointer */
  int user_managed; /* indicates whether the user is managing memory */
  bool force_part;  /* indicates if this map should not be cut - must pointing to prime set */
} op_map_core;
typedef op_map_core *op_map;
typedef struct {
  int index;        /* index */
  op_set set;       /* set on which data is defined */
  int dim,          /* dimension of data */
      size;         /* size of each element in dataset */
  char *data,       /* data on host */
      *data_d;      /* data on device (GPU) */
  char const *type, /* datatype */
      *name;        /* name of dataset */
  char *buffer_d;   /* buffer for MPI halo sends on the devidce */
  char *buffer_d_r; /* buffer for MPI halo receives on the devidce */
  int dirtybit;     /* flag to indicate MPI halo exchange is needed*/
  int dirty_hd;     /* flag to indicate dirty status on host and device */
  int user_managed; /* indicates whether the user is managing memory */
  void *mpi_buffer; /* ponter to hold the mpi buffer struct for the op_dat*/
} op_dat_core;
typedef op_dat_core *op_dat;
typedef struct {
  int index;        /* index */
  op_dat dat;       /* dataset */
  op_map map;       /* indirect mapping */
  int dim,          /* dimension of data */
      idx, size;    /* size (for sequential execution) */
  char *data,       /* data on host */
      *data_d;      /* data on device (for CUDA execution) */
  int *map_data,    /* data on host */
      *map_data_d;  /* data on device (for CUDA execution) */
  char const *type; /* datatype */
  op_access acc;
  op_arg_type argtype;
  int sent; /* flag to indicate if this argument has
               data in flight under non-blocking MPI comms*/
  int opt;  /* flag to indicate if this argument is in use */
} op_arg;
int op_mpi_halo_exchanges_cuda(op_set set, int nargs, op_arg *args);
void op_mpi_set_dirtybit_cuda(int nargs, op_arg *args);
void op_mpi_wait_all_cuda(int nargs, op_arg *args);
void op_mpi_reduce_combined(op_arg *args, int nargs);
void op_mpi_reduce_float(op_arg *args, float *data);
void op_mpi_reduce_double(op_arg *args, double *data);
void op_mpi_reduce_int(op_arg *args, int *data);
void op_mpi_reduce_bool(op_arg *args, bool *data);
/*******************************************************************************
* Toplevel partitioning selection function - also triggers halo creation
*******************************************************************************/
void op_partition(const char *lib_name, const char *lib_routine,
                  op_set prime_set, op_map prime_map, op_dat coords);
void op_renumber(op_map base);