op2/fortran/include/op2_for_rt_wrappers.h

/*
 *  These functions scan all declared mappings and decrement/increment their
 *  values by one (used for FORTRAN <--> C conversions)
 */

void decrement_all_mappings ();
void increment_all_mappings ();
void prepareScratch (op_arg *args, int nargs, int nthreads);