op2/fortran/src/op2_for_rt_support.F90


      type(c_ptr), value ::         set        ! iteration set
      integer(kind=c_int), value :: argsNumber ! number of op_dat arguments to op_par_loop
      type(op_arg), dimension(*) :: args       ! array with op_args

    end function op_mpi_halo_exchanges_cuda

    subroutine op_mpi_wait_all_cuda (argsNumber, args) BIND(C,name='op_mpi_wait_all_cuda')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      integer(kind=c_int), value :: argsNumber ! number of op_dat arguments to op_par_loop
      type(op_arg), dimension(*) :: args       ! array with op_args

    end subroutine

    subroutine op_get_all_cuda (argsNumber, args) BIND(C,name='op_get_all_cuda')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      integer(kind=c_int), value :: argsNumber ! number of op_dat arguments to op_par_loop
      type(op_arg), dimension(*) :: args       ! array with op_args

    end subroutine


    subroutine op_mpi_set_dirtybit_cuda (argsNumber, args) BIND(C,name='op_mpi_set_dirtybit_cuda')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      integer(kind=c_int), value :: argsNumber ! number of op_dat arguments to op_par_loop
      type(op_arg), dimension(*) :: args       ! array with op_args

    end subroutine

    subroutine op_mpi_reduce_combined (args, argsNumber) BIND(C,name='op_mpi_reduce_combined')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      type(op_arg), dimension(*) :: args       ! array with op_args
      integer(kind=c_int), value :: argsNumber ! number of op_dat arguments to op_par_loop

   end subroutine

    subroutine op_mpi_reduce_int (arg, data) BIND(C,name='op_mpi_reduce_int')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      type(op_arg) :: arg
      type(c_ptr) :: data

    end subroutine

    subroutine op_mpi_reduce_double (arg, data) BIND(C,name='op_mpi_reduce_double')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      type(op_arg) :: arg
      type(c_ptr) :: data

    end subroutine

    subroutine op_mpi_reduce_float (arg, data) BIND(C,name='op_mpi_reduce_float')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      type(op_arg) :: arg
      type(c_ptr) :: data

    end subroutine

    ! commented while waiting for C-side support
    subroutine op_mpi_reduce_bool (arg, data) BIND(C,name='op_mpi_reduce_bool')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      type(op_arg) :: arg
      type(c_ptr) :: data

    end subroutine

    subroutine prepareScratch(args,argsNumber, nthreads) BIND(C,name='prepareScratch')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      integer(kind=c_int), value :: argsNumber ! number of op_dat arguments to op_par_loop
      integer(kind=c_int), value :: nthreads
      type(op_arg), dimension(*) :: args       ! array with op_args

    end subroutine

    ! debugging routines
    subroutine op_dump_arg (arg) BIND(C,name='op_dump_arg')

      use, intrinsic :: ISO_C_BINDING
      use OP2_Fortran_Declarations

      type(op_arg) :: arg

    end subroutine

    subroutine decrement_all_maps () BIND(C,name='decrement_all_mappings')
    end subroutine decrement_all_maps

    subroutine increment_all_maps () BIND(C,name='increment_all_mappings')
    end subroutine increment_all_maps

    integer(kind=c_int) function op_mpi_size () BIND(C,name='op_mpi_size')
      use, intrinsic :: ISO_C_BINDING
    end function op_mpi_size

    subroutine op_barrier () BIND(C,name='op_barrier')
    end subroutine op_barrier

    integer(kind=c_int) function setKernelTime (id, name, kernelTime, transfer, transfer2, count) BIND(C,name='setKernelTime')

      use, intrinsic :: ISO_C_BINDING

      integer(kind=c_int), value :: id
      character(kind=c_char) :: name(*)
      real(kind=c_double), value :: kernelTime
      real(kind=c_float), value :: transfer
      real(kind=c_float), value :: transfer2
      integer(kind=c_int), value :: count

    end function setKernelTime

  end interface

  contains

  subroutine op_partition (lib_name, lib_routine, prime_set, prime_map, coords)

    use, intrinsic :: ISO_C_BINDING
    use OP2_Fortran_Declarations

    implicit none

    character(kind=c_char,len=*) :: lib_name
    character(kind=c_char,len=*) :: lib_routine

    type(op_set) :: prime_set
    type(op_map) :: prime_map
    type(op_dat) :: coords

    call op_partition_c (lib_name//C_NULL_CHAR, lib_routine//C_NULL_CHAR, prime_set%setPtr, prime_map%mapPtr, coords%dataPtr)

  end subroutine

  subroutine op_partition2 (lib_name, lib_routine, prime_set, prime_map, coords)

    use, intrinsic :: ISO_C_BINDING
    use OP2_Fortran_Declarations

    implicit none

    character(kind=c_char,len=*) :: lib_name
    character(kind=c_char,len=*) :: lib_routine

    type(op_set) :: prime_set
    integer*4, dimension(*), target :: prime_map
    real*8, dimension(*), target :: coords

    call op_partition_ptr_c (lib_name//C_NULL_CHAR, lib_routine//C_NULL_CHAR, prime_set%setPtr, c_loc(prime_map), c_loc(coords))

  end subroutine

  subroutine op_renumber (base_map)

    use, intrinsic :: ISO_C_BINDING
    use OP2_Fortran_Declarations

    implicit none

    type(op_map) :: base_map

    call op_renumber_c (base_map%mapPtr)

  end subroutine
  
  subroutine op_renumber_ptr (prime_map)  
    use, intrinsic :: ISO_C_BINDING

    implicit none
    integer*4, dimension(*), target :: prime_map
    call op_renumber_ptr_c(c_loc(prime_map))
  end subroutine


  subroutine op_dat_write_index(set, dat)
    use, intrinsic :: ISO_C_BINDING
    use OP2_Fortran_Declarations

    implicit none
    type(op_set) :: set
    integer(4), dimension(*), target :: dat

    call op_dat_write_index_c(set%setCPtr, c_loc(dat))
  end subroutine

end module OP2_Fortran_RT_Support
